Attempted to fix page-break printout problem on Safari

--- a/css/index.css
+++ b/css/index.css
@@ -1128,15 +1128,14 @@ section {
     }
 
     .card {
+        box-shadow: none;
         break-inside: avoid;
         display: inline-table; /* Make element unbreakable for Safari */
-        box-shadow: none;
         box-shadow: var(--box-shadow-tiny-light-mode);
     }
 
     .card:hover {
         box-shadow: none;
-        box-shadow: var(--box-shadow-tiny-light-mode);
     }
 
     header, .footer {
